# traact_component_kinect_azure

./: CMakeLists.txt  conanfile.py
src/: KinectAzure.cpp  KinectAzure.h  KinectAzureBodyOutput.cpp  KinectAzureColorOutput.cpp  KinectAzureDepthOutput.cpp  KinectAzureIROutput.cpp  KinectAzureOutputBody.cpp  KinectAzureOutputCalibration.cpp  KinectAzureOutputColor.cpp  KinectAzureOutputDepth.cpp  KinectAzureOutputIR.cpp  KinectAzurePlayer.cpp  KinectAzurePlayer.h  KinectAzureSingleFilePlayer.cpp  KinectAzureStaticData.h  KinectLookupTable.h  KinectUtils.cpp  KinectUtils.h
